<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout style="@style/ActionLayoutStyle">

        <TextView
            style="@style/TitleStyle"
            android:text="@string/registration" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeOffsetDimen"
            android:layout_marginBottom="@dimen/largeOffsetDimen"
            android:src="@drawable/ic_key" />

        <EditText
            android:id="@+id/name_et"
            style="@style/EditTextR"
            android:hint="@string/nameHint" />


        <EditText
            android:id="@+id/login_et"
            style="@style/EditTextR"
            android:hint="@string/loginHint" />


        <EditText
            android:id="@+id/password_et"
            style="@style/EditTextR"

            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/done_btn"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/largeOffsetDimen"
            android:layout_marginBottom="@dimen/lastItemScrollingDimen"
            android:text="@string/done" />

    </LinearLayout>
</ScrollView>
