<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@color/colorMainBackground">

        <RadioGroup
            android:id="@+id/radius_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radius_20_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_20km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_15_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_15km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_10_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_10km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_5_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_5km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_3_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_3km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_1_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/offsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_1km"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />

            <RadioButton
                android:id="@+id/radius_500_radio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/filterItemDimen"
                android:layout_marginStart="@dimen/offsetDimen"
                android:layout_marginTop="@dimen/offsetDimen"
                android:layout_marginEnd="@dimen/offsetDimen"
                android:layout_marginBottom="@dimen/largeOffsetDimen"
                android:background="@drawable/field_item"
                android:text="@string/radius_500m"
                android:textColor="@color/colorItemText"
                android:textSize="@dimen/textDefaultDimen" />


        </RadioGroup>
    </ScrollView>

    <ImageButton
        android:id="@+id/check_btn"
        style="@style/ExpressButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_check" />


</RelativeLayout>