<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainLayoutStyle">

    <ScrollView
        android:id="@+id/profile_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            style="@style/ActionLayoutStyle"
            android:layout_margin="0dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image_view"
                style="@style/primary_image"
                android:layout_marginTop="@dimen/offsetDimen"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/user_name_text_view"
                style="@style/TextView.Title"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name" />

            <LinearLayout
                style="@style/FirstLevelInnerLayout"
                android:layout_marginTop="@dimen/offsetDimen"
                android:gravity="center">


                <ImageView
                    android:id="@+id/user_city_icon_text_view"
                    style="@style/TextView.PrimaryText"
                    android:layout_marginTop="@dimen/nullDimen"
                    android:src="@drawable/ic_location_city" />

                <TextView
                    android:id="@+id/user_location_text_view"
                    style="@style/TextView.PrimaryText"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="@dimen/nullDimen"
                    android:text="@string/city" />
            </LinearLayout>


            <TextView
                style="@style/TextView.DefaultText"
                android:layout_marginTop="@dimen/offsetDimen"
                android:text="@string/registration_date" />

            <TextView
                android:id="@+id/user_account_registered_date_text_view"
                style="@style/TextView.PrimaryText"
                android:layout_marginTop="0dp"
                android:text="@string/registered_date" />

            <LinearLayout
                style="@style/FirstLevelInnerLayout"
                android:layout_marginTop="8dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_count_returning_text_view"
                        style="@style/TextView.PrimaryText"
                        android:text="1"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextView.DefaultText"
                        android:text="@string/returning" />

                    <View
                        android:id="@+id/is_touch_returning_view"
                        style="@style/ViewStyle"
                        android:background="@color/colorItemText" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/user_count_returned_text_view"
                        style="@style/TextView.PrimaryText"
                        android:text="5" />

                    <TextView
                        style="@style/TextView.DefaultText"
                        android:text="@string/returned" />

                    <View
                        android:id="@+id/is_touch_returned_view"
                        style="@style/ViewStyle" />
                </LinearLayout>
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_ads_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorMainBackground">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/up_btn"
        style="@style/ExpressButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_up" />

</RelativeLayout>