<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorItemBackground">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/find_thing_image_view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/field_item"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/without_photo" />

            <TextView
                android:id="@+id/ad_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_item"
                android:hint="@string/enter_the_title"
                android:maxLength="28"
                android:maxLines="2"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorItemText"
                android:textColorHint="@color/colorItemText"
                android:textSize="@dimen/textTitleDimen" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/colorMainBackground" />

            <LinearLayout
                android:id="@+id/ad_found_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_item"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/found"
                    android:textColor="@color/colorDefaultText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/ad_found_date_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/enter_the_date_of_the_find"
                    android:textColor="@color/colorItemText"
                    android:textSize="@dimen/textDefaultDimen" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorMainBackground" />

            <LinearLayout
                android:id="@+id/ad_location_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/select_location_of_find"
                    android:textColor="@color/colorItemText"
                    android:textSize="@dimen/textDefaultDimen" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_more_category" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorMainBackground" />

            <LinearLayout
                android:id="@+id/ad_category_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_item"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_title"
                    android:textColor="@color/colorDefaultText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/category_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_category"
                    android:textColor="@color/colorItemText"
                    android:textSize="@dimen/textDefaultDimen" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorMainBackground" />

            <LinearLayout
                android:id="@+id/ad_description_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_item"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/description_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ad_details_label"
                    android:textColor="@color/colorDefaultText"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/ad_description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/describe_the_found_thing"
                    android:maxLength="1000"
                    android:textColor="@color/colorItemText"
                    android:textColorHint="@color/colorItemText"
                    android:textSize="@dimen/textDefaultDimen" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorMainBackground" />


            <Button
                android:id="@+id/publish_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/published_button" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:theme="@style/CircularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible" />

</RelativeLayout>
